added cart dropdown

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,9 +5,9 @@
     height: 300px;
     width: 150px;
     margin: 10px;
-    border: solid 1px rgb(77, 73, 73);
     border-radius: 10px;
     overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   
     .image {
       width: 85%;
