--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -2,14 +2,20 @@
     border-bottom: solid 1px rgba(0, 0, 0, 0.253);
     max-width: 97.5%;
     margin: 15px auto 25px;
-  
+    display: flex;
+    justify-content: space-between;;
+    align-items: center;
+
+    p {
+      font-size: 16px;
+      cursor: pointer;
+      color: rgb(248, 149, 0);
+    }
   }
     
   .title {
     font-size: 18px;
     font-weight: 200;
-    margin: 25px auto 5px;
-    text-align: left;
   }
   
   .items-container {
