--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -26,6 +26,14 @@
     cursor: pointer;
 }
 
+.dropdown-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1450px;
+}
+
 
 @media only screen and (max-width: 990px) {
     .menu {
