added  cart-dropdown styles and search-bar component

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,6 +1,5 @@
 .cart-dropdown {
-  
-  position: absolute;
+  position: fixed;
   width: 400px;
   height: 340px;
   display: flex;
@@ -8,8 +7,8 @@
   padding: 20px;
   border-radius: 10px;
   background-color: white;
-  top:5px;
-  right: 40px;
+  top:60px;
+  right: 15%;
   z-index: 5;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
@@ -28,6 +27,15 @@
   button {
     margin-top: auto;
   }
+
+  @media only screen and (max-width: 1400px) {
+    right: 40px;
+  }  
+
+  @media only screen and (max-width: 990px) {
+    top:105px;
+  }   
+
 }
 
 .checkout {
