--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -8,6 +8,10 @@
   margin-bottom: 10px;
   color: rgba(0, 0, 0, 0.685);
   
+  @media only screen and (max-width: 990px) {
+    grid-template-columns: 1fr 1fr 1.5fr;
+    grid-gap: 0px;
+}
 
   img {
     width: 60px
@@ -49,8 +53,16 @@
 
 .remove-button {
   cursor: pointer;
+  @media only screen and (max-width: 990px) {
+    display: none;
+  }
+ 
 }
 
 .price {
   font-size: 14px;
+
+  @media only screen and (max-width: 990px) {
+    display: none;
+  }
 }
