--- a/src/components/category/category.styles.scss
+++ b/src/components/category/category.styles.scss
@@ -1,8 +1,15 @@
 .category-wrapper {
-    min-width: 150px ;
-    max-height: 70vh;
+    display: block;
+   min-width: 150px;
+   max-width: 150px;
+    max-height: 350px;
     background-color: rgba(197, 197, 197, 0.384);
     margin-right: 20px;
+
+    @media only screen and (max-width: 990px) {
+        display: none;
+    }
+
 }
 
 .category-title {
