--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -1,4 +1,5 @@
 .item-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,7 +8,11 @@
     margin: 10px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0 rgba(0, 0, 0, 0.10);
+    
+    &:hover {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
   
     .image {
       width: 85%;
@@ -15,6 +20,7 @@
       background-size: cover;
       background-position: center;
       margin-bottom: 5px;
+      cursor: pointer;
     }
     .name {
       padding: 5px 10px;
@@ -24,7 +30,7 @@
         text-align: center;
       }
     }
-    .price {
+    .geld {
         padding: 25px 10px 5px;
         p {
           font-size: 16px;
@@ -32,6 +38,21 @@
           color: rgb(255, 153, 0);
           text-align: center;
         }
+    }
+
+    .geld-discount {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background: linear-gradient(120deg, gray 50%, rgb(255, 230, 0) 50%);
+      margin: 25px 0 0px;
+      width: 100%;
+      height: 25px;
+
+      :first-child {
+        color: white;
+        font-size: 11px;
+      }
     }
   
     .unit {
@@ -62,8 +83,32 @@
     }
   }
 
+  .discount {
+    font-size: 10px;
+    font-weight: 400;
+    position: absolute;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 230, 0);
+    padding: 4px;
+    border-radius: 5px;
+  }
+
+ 
+
 @media only screen and (max-width: 990px) {
     .item-container {
         margin: 5px;
     }
+}
+
+@media only screen and (max-width: 415px) {
+  .item-container {
+      margin: 3px;
+      max-width: 140px;
+  }
+
 }
