--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -4,8 +4,8 @@
   grid-template-columns: 1fr 1fr 1.2fr 1fr 0.5fr;
   align-items: center;
   grid-gap: 10px;
-  height: 70px;
-  margin-bottom: 10px;
+  min-height: 80px;
+  margin-bottom: 15px;
   color: rgba(0, 0, 0, 0.685);
   
   @media only screen and (max-width: 990px) {
@@ -26,6 +26,7 @@
     padding-left: 10px;
     font-size: 12px;
     flex-shrink: 0.6 ;
+ 
   }
 }
 
