added product note

--- a/src/pages/item-detail/item-detail.styles.scss
+++ b/src/pages/item-detail/item-detail.styles.scss
@@ -189,8 +189,7 @@
 .item-detail-account {
     border: 2px solid rgba(255, 137, 2, 0.815);
     border-radius: 4px;
-    width: 40px;
-    height: 40px;
+    padding: 7px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -198,7 +197,7 @@
     cursor: pointer;
 
     span {
-        font-size: 20px;
+        font-size: 12px;
     }
 }
 
