--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,13 +1,18 @@
+.checkout-item-wrapper {
+  margin: 8px 0;
+}
+
+
 .checkout-item {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 4px 0;
     grid-gap: 10px;
     min-height: 80px;
-    margin-bottom: 15px;
     color: rgba(0, 0, 0, 0.685);
-    border-bottom: 0.5px solid rgba(0, 0, 0, 0.103);
+    
   
     img {
       width: 60px
@@ -47,17 +52,19 @@
   }
   
   .checkout-account {
+    cursor: pointer;
+    margin: 5px 10px;
+    padding: 2px 4px;
+    font-size: 8px;
+    text-align: center;
     border: 1px solid rgb(255, 145, 0);
     border-radius: 4px;
-    width: 20px;
-    text-align: center;
-    margin: 5px 10px;
-    cursor: pointer;
   }
   .checkout-account-upper {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: rgba(0, 0, 0, 0.801);
   }
   
   .checkout-remove-button {
@@ -81,3 +88,35 @@
       font-size: 18px;
       font-weight: bold;
   }
+
+  .product-note {
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+    label {
+      color: rgb(255, 123, 0);
+      font-weight: bold;
+    }
+
+
+    textarea {
+      margin-top: 5px;
+      border-radius: 5px;
+    }
+
+   
+}
+
+.product-note.active {
+  display: none;
+}
+
+.product-note-title {
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
