--- a/src/components/cart-icon/cart-icon.styles.scss
+++ b/src/components/cart-icon/cart-icon.styles.scss
@@ -1,4 +1,5 @@
 .shopWrapper {
+    min-width: 143px;
     margin-left: 20px;
     cursor: pointer;
 }
@@ -26,7 +27,7 @@
     width: 15px;
     height: 15px;
     border-radius: 12px;
-    right:30px;
+    right:35px;
     top:1px;
 }
 .total{
