--- a/src/components/search-bar/search-bar.styles.scss
+++ b/src/components/search-bar/search-bar.styles.scss
@@ -37,9 +37,9 @@
     
 }
 
-@media only screen and (max-width: 990px) { 
+@media only screen and (max-width: 1060px) { 
     .search {
-        margin: 0px;
+        margin: 0px 5px;
     }
     
     .input {
