--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -26,8 +26,13 @@
       padding: 5px 10px;
       height: 30px;
       p {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical; 
+        overflow:hidden;
         font-size: 13px;
         text-align: center;
+        overflow:hidden;
       }
     }
     .geld {
@@ -81,6 +86,27 @@
       background-color:rgba(255, 153, 0, 0.795);
     } 
     }
+
+
+    @media only screen and (max-width: 990px) {
+          margin: 5px;
+    }
+
+    @media only screen and (max-width: 415px) {
+          margin: 3px;
+          max-width: 140px;
+    }
+
+    @media only screen and (max-width: 375px) {
+          margin: 3px;
+          max-width: 125px;
+    }
+
+  @media only screen and (max-width: 320px) {
+      margin: 3px;
+      max-width: 115px;
+}
+
   }
 
   .discount {
@@ -96,19 +122,3 @@
     padding: 4px;
     border-radius: 5px;
   }
-
- 
-
-@media only screen and (max-width: 990px) {
-    .item-container {
-        margin: 5px;
-    }
-}
-
-@media only screen and (max-width: 415px) {
-  .item-container {
-      margin: 3px;
-      max-width: 140px;
-  }
-
-}
