--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -29,8 +29,27 @@
   }
 
 
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 1060px) {
+    .title-container {
+      
+      max-width: 92%;
+      
+      p{
+      font-size: 14px;
+    }
+  }
     .items-container {
-        justify-content: space-between;;
-}   }
+        justify-content: center;
+    }
+    .title {
+      font-size: 16px;
+    }  
+ }
+
+
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 14px;
+  }  
+}
   
