--- a/src/components/search-bar/search-bar.styles.scss
+++ b/src/components/search-bar/search-bar.styles.scss
@@ -5,25 +5,27 @@
     border-radius: 6px;
     overflow: hidden;
     position: relative;
+
+    div {
+        position: absolute;
+        z-index: 1;
+        right: 0;
+        background: rgb(255, 153, 0);
+        color:rgb(255, 255, 255) ;
+        height: 30px;
+        border: none;
+        width: 80px;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
 }
 
-.inputWrapper a {
-    position: absolute;
-    z-index: 1;
-    right: 0;
-    background: rgb(255, 153, 0);
-    color:rgb(255, 255, 255) ;
-    height: 35px;
-    border: none;
-    width: 80px;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .input {
     width: 400px;
-    height: 35px;
+    height: 30px;
     text-indent: 30px;
     border: none;
     
@@ -32,14 +34,14 @@
 .searchIcon {
     position: absolute;
     z-index: 888;
-    top: 6px;
+    top: 4px;
     left: 4px;
-    
 }
+
 
 @media only screen and (max-width: 1060px) { 
     .search {
-        margin: 0px 5px;
+        margin: 0px 15px;
     }
     
     .input {
