--- a/src/components/sidebar-item/sidebar-item.styles.scss
+++ b/src/components/sidebar-item/sidebar-item.styles.scss
@@ -1,7 +1,7 @@
 .nav-text {
     padding: 8px 0px 8px 16px;
     list-style: none;
-    height: 60px;
+    max-height: 60px;
     cursor: pointer;
 
     div {
@@ -28,15 +28,17 @@
             background-color: #1a83ff;
         }
     }
+    
 }
 
 @media only screen and (max-width: 1060px) {
     .nav-text {
-        height: 55px;
+        max-height: 55px;
+        padding: 4px 0px 4px 16px;
         div {
-            padding: 0 6px;
+            padding: 0px 6px;
             span {
-                font-size: 14px;
+                font-size: 12px;
             
             }
         }
@@ -50,6 +52,9 @@
             height: 100%;
             span {
                 font-size: 6px;
+            }
+            .title {
+                font-size: 12px;
             }
         }
     }    
