--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -43,3 +43,12 @@
         margin:10px 10px 20px 70px;
     }
 }
+
+@media only screen and (max-width: 425px) {
+    .collection-page {
+        margin:10px 10px 20px 60px;
+    }
+    .collection-page.active {
+        margin:10px 10px 20px 60px;
+    }
+}
