--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -23,3 +23,12 @@
         margin:10px 10px 20px 70px;
     }
 }
+
+@media only screen and (max-width: 425px) {
+    .homepage-wrapper {
+        margin:10px 10px 20px 60px;
+    }
+    .homepage-wrapper.active {
+        margin:10px 10px 20px 60px;
+    }
+}
