--- a/src/pages/item-detail/item-detail.styles.scss
+++ b/src/pages/item-detail/item-detail.styles.scss
@@ -19,7 +19,17 @@
     }
 
     @media only screen and (max-width: 425px) {
-        max-width: 330px;
+        max-width: 320px;
+        h2 {
+            font-size: 18px;
+        }
+     }
+     @media only screen and (max-width: 375px) {
+        max-width: 300px;
+     }
+
+     @media only screen and (max-width: 320px) {
+        max-width: 260px;
      }
 }
 
@@ -114,6 +124,10 @@
         @media only screen and (max-width: 990px) {
             width: 280px;
         }
+
+        @media only screen and (max-width: 425px) {
+            width: 240px;
+        }
           
       }
       ::placeholder {
@@ -153,7 +167,7 @@
     }
 
     @media only screen and (max-width: 425px) {
-        font-size: 14px;
+        font-size: 12px;
      }
 
 
@@ -173,8 +187,13 @@
     }
 
     @media only screen and (max-width: 425px) {
-        max-width: 330px;
+        max-width: 300px;
         height: 280px;
+     }
+
+     @media only screen and (max-width: 320px) {
+        max-width: 260px;
+        height: 240px;
      }
 }
 
@@ -213,16 +232,10 @@
 }
 
 
-@media only screen and (max-width: 1070px) {
+@media only screen and (max-width: 1060px) {
     .item-detail {
-        margin:10px 10px 20px 90px;
+        margin:10px 10px 20px 70px;
     }
-    .item-detail.active {
-        margin:10px 10px 20px 240px;
-    }
-}
-
-@media only screen and (max-width: 700px) {
     .item-detail.active {
         margin:10px 10px 20px 70px;
     }
@@ -230,9 +243,9 @@
 
 @media only screen and (max-width: 425px) {
     .item-detail {
-        margin:10px 10px 20px 63px;
+        margin:10px 10px 20px 60px;
     }
     .item-detail.active {
-        margin:10px 10px 20px 63px;
+        margin:10px 10px 20px 60px;
     }
 }
