--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -4,13 +4,17 @@
   display: flex;
   flex-direction: column;
   align-items: left;
-  margin: 50px auto 0;
+  margin: 50px auto 10px;
   button {
     margin-left: auto;
     margin-top: 50px;
   }
-  @media screen and (max-width: 800px) {
-    width: 90%;
+  @media screen and (max-width: 1060px) {
+    width: 70%;
+  }
+
+  @media screen and (max-width: 425px) {
+    margin: 50px 0px 10px 60px;
   }
 }
 
@@ -26,21 +30,6 @@
     font-weight: 100;
   }
 }
- 
-
-.header-block-container {
-  text-transform: capitalize;
-  width: 23%;
-  &:last-child {
-    width: 8%;
-  }
-  @media screen and (max-width: 800px) {
-    width: 22%;
-    &:last-child {
-      width: 12%;
-    }
-  }
-}
 
 .total-container {
   margin-top: 30px;
@@ -54,4 +43,3 @@
   font-size: 24px;
   color: red;
 }
-
